--- a/src/pages/AdminDashboard/AdminDashboard.css
+++ b/src/pages/AdminDashboard/AdminDashboard.css
@@ -52,9 +52,18 @@
   position: fixed;
   top: 0px;
   left: 0px;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.modal-contents {
   width: 40%;
   height: 40vh;
   margin: 120px 400px;
+  margin-bottom: 200px;
   padding: 20px;
   background-color: white;
   border: 1px solid lightblue;
